@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-40.1
-Date: 2010-06-24
+Date: 2010-06-25
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
