@@ -50,10 +50,34 @@ setMethod("as.numeric", signature(x = "Matrix"),
 setMethod("as.logical", signature(x = "Matrix"),
 	  function(x, ...) as.logical(as.vector(x)))
 
+setMethod("mean", signature(x = "sparseMatrix"),
+	  function(x, ...) mean(as(x,"sparseVector"), ...))
+setMethod("mean", signature(x = "sparseVector"),
+	  function(x, trim = 0, na.rm = FALSE, ...)
+      {
+	  if (na.rm) # remove NAs such that new length() is ok
+	      x <- x[!is.na(x)] # remains sparse!
+	  if(is0(trim)) sum(x) / length(x)
+	  else {
+	      ## fast trimmed mean for sparseVector:
+	      ## ---> we'd need fast & sparse  sort(<sparseV>).
+	      ##      Normally this means to define a xtfrm() method;
+	      ##      however, that plus  x[order(x, ..)]  will NOT be sparse
+	      ## TODO: sortSparseVector(.)
+	      warning("trimmed mean of 'sparseVector' -- suboptimally using as.numeric(.)")
+	      mean(as.numeric(x), trim=trim)
+	  }
+      })
+## for the non-"sparseMatrix" ones:
 setMethod("mean", signature(x = "Matrix"),
-	  function(x, trim = 0, ...) ## TODO: provide 'sparseMatrix method
-	  if(is0(trim)) sum(x, ...) / length(x)
-	  else mean(as.numeric(x), ...))
+	  function(x, trim = 0, na.rm = FALSE, ...)
+      {
+	  if (na.rm)
+	      x <- x[!is.na(x)]
+	  if(is0(trim)) sum(x) / length(x)
+	  else mean(as.numeric(x), trim=trim)
+      })
+
 
 setMethod("cov2cor", signature(V = "Matrix"),
 	  function(V) { ## was as(cov2cor(as(V, "matrix")), "dpoMatrix"))
