@@ -219,3 +219,7 @@
   This is not particularly exciting, and also does *not*, I think
   help for defining a chol2inv() method for  *sparse* (upper)
   triangular matrices.
+
+- sort(<sparseVector>, partial=..), needed, e.g. for mean(*, trim = .).
+  Note that defining xtfrm() does not "help" (as sort() then goes via dense
+  index).  See "mean" in R/Matrix.R
